# Sigorjob

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
.github/: branch-protection.json  pull_request_template.md
backend/: backend.spec  cli.py  custom_commands.py  debug_trace.py  main.py  permissions.py  requirements-optional.txt  requirements.txt
backend/ai/: agent.py  reviewer.py  runtime.py  summarizer.py
backend/config/: .env.example  secret_store.py  settings.py  store.py
backend/connections/: __init__.py  base.py  manager.py  mcp_presets.py  oauth.py  oauth_scopes.py  registry.py
backend/db/: models.py  session.py
backend/gateway/: app.py
backend/intent/: korean.py  normalizer.py  risk_evaluator.py  router.py
backend/logger/: logger.py
backend/notifications/: store.py
backend/orchestrator/: capability_gate.py  engine.py  result_quality.py  task.py
backend/plugins/: __init__.py  loader.py
backend/policy/: auto_approval.py  engine.py  policies.yaml
backend/scheduler/: service.py
docs/: README.md  api-spec.md  architecture.md  cautions.md  folder-structure.md  modules.md  mvp.md
frontend/: package-lock.json  package.json
mobile/: App.tsx  app.json  index.js  package-lock.json  package.json  tsconfig.json
scripts/: build-app.sh  build-backend.sh  check-dist-readiness.sh  check-remote-flow.sh  cli.sh  dev-harness.py  dev.sh  eval-harness.py  improve-harness.py  stage-cloudflared.sh  test-backend.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+249 files in other folders)
