[package]
name = "agent-platform"
version = "0.1.0"
description = "Sigorjob Desktop App"
authors = []
edition = "2021"

[lib]
name = "agent_platform_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
